finished on desktop with no audio

--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Happy VDAY <3 </title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="imgs/heart.ico">
 </head>
 <body>
-
-
     <main class="container">
     <section class="first">
         <div class="content">
@@ -28,7 +27,7 @@
     
     <section class="third">
         <div class="content">
-            <h2 id="cartiText">are u Red? bc i want a whole lotta u</h2>
+            <h2 id="cartiText"><span id="carti1">are u Red?</span><br><span id="carti2">bc i want a whole lotta u</span></h2>
         </div>
         <img src="./imgs/carti.JPG" alt="PlayBoi Carti" class="carti">
     </section>
@@ -49,15 +48,23 @@
 
     <section class="six">
         <div class="content">
-            <h2 id="sosaText">you got me leanin over</h2>
+            <h2 id="sosaText">you got me leanin over
+            </h2>
         </div>
         <img src="./imgs/sosa.JPG" alt="Chief Keef"class="sosa"> 
     </section>
-    <h1> &copy; All Rights Reserved</h1>
+    <h1> &copy; All Rights Reserved Kodone</h1>
 </main>
+    
 
+<div class="trail"></div>
+<div class="trail-container"></div>
+
+      <script src="https://unpkg.com/split-type"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"></script>
       <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/ScrollTrigger.min.js"></script>
+
       <script src="script.js" type="module"></script>
+
 </body>
 </html>
