--- a/index.html
+++ b/index.html
@@ -7,8 +7,15 @@
     <title>Happy VDAY <3 </title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="imgs/heart.ico">
+    <script>
+        function playAudio() {
+        const audio = new Audio("font/Rock N Roll.mp3");
+        audio.loop = true;
+        audio.play();
+      }
+    </script>
 </head>
-<body>
+<body onclick="playAudio()">
     <main class="container">
     <section class="first">
         <div class="content">
