--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
     <section class="six">
         <div class="content">
-            <h2 id="sosaText">you got me leanin over
+            <h2 id="sosaText">you got me leanin over for
             </h2>
         </div>
         <img src="./imgs/sosa.JPG" alt="Chief Keef"class="sosa"> 
